--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "start:dev": "env-cmd -f .env.development nodemon server.js",
-    "start:prod": "env-cmd -f .env.production node server.js"
-  },
+    "start": "node server.js" },
   "author": "",
   "license": "ISC",
   "dependencies": {
